--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "aai-retiring-room",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
